--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 	<h1>HTML code examples</h1>
 <a href="">HTML example 1</a>
 <a href="">HTML example 2</a>
+<a href="">HTML example 2</a>
 </body>
 </html>
