--- a/index.html
+++ b/index.html
@@ -3,12 +3,39 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Dailu Basic HTML</title>
+	<title>Dailu Basic HTML tags</title>
 </head>
 <body>
+  <!-- This is where the heading come in -->
+  <h1>Heading One</h1>
+  <h2>Heading Two</h2>
+  <h3>Heading Three</h3>
+  <h4>Heading Four</h4>
+  <h5>Heading Five</h5>
+  <h6>Heading Six</h6>
 	<h1>HTML code examples</h1>
-<a href="">HTML example 1</a>
-<a href="">HTML example 2</a>
-<a href="">HTML example 2</a>
+
+  <!-- Paragraphs -->
+  <p>"Lorem ipsum  dolor sit amet, consectetur adipiscing elit,
+    sed do eiusmod tempor  incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+    ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  </p>
+  <!-- In this paragraph we will try bold and italyc format -->
+  <p>
+    <strong>Duis aute irure dolor in reprehenderit in voluptate velit
+    esse cillum dolore eu fugiat nulla pariatur. "</strong></p>
+  <p><em>"Excepteur sint occaecat cupidatat non proident, sunt in
+    culpa qui officia deserunt mollit anim id est laborum."</em></p>
+
+<!-- Trying Hyperlinks -->
+<!-- Local page -->
+<a href="htmlpage1.html">HTML page 1</a>
+<br>
+<!-- Remote site on same window -->
+<a href="https://google.com" >Go to Google</a>
+<br>
+<!-- Remote site on a new tab -->
+<a href="https://github.com" target="_blank">Go to Github</a>
 </body>
 </html>
