working on HTML course

--- a/index.html
+++ b/index.html
@@ -1,35 +1,71 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+  <!-- Meta are description tags, define meta data about the file  -->
+
 	<meta charset="utf-8">
+	<meta name="description" content="This is a page for practicing HTML">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+
 	<title>Dailu Basic HTML tags</title>
 </head>
+
+  <!-- in the body we insert the contect of the website -->
+<!-- <body style="background-color:lightblue;"> -->
 <body>
-  <!-- This is where the heading come in -->
+<h2>These are two awesome Youtube videos about HTML</h2>
+<div class="">
+<iframe width="600" height="343" src="https://www.youtube.com/embed/pQN-pnXPaVg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+<br>
+<div class="">
+<iframe width="600" height="343" src="https://www.youtube.com/embed/UB1O30fR-EE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+</div>
+  <!-- Testing heading tags -->
   <h1>Heading One</h1>
   <h2>Heading Two</h2>
   <h3>Heading Three</h3>
   <h4>Heading Four</h4>
   <h5>Heading Five</h5>
   <h6>Heading Six</h6>
-	<h1>HTML code examples</h1>
+	<br>
+	<hr/>
 	<br>
   <!-- Paragraphs -->
-  <p>"Lorem ipsum  dolor sit amet, consectetur adipiscing elit,
+	<h2> Working with paragrahs and styling </h2>
+	<h4>Normal text</h4>
+	<p>"Lorem ipsum  dolor sit amet, consectetur adipiscing elit,
     sed do eiusmod tempor  incididunt ut labore et dolore magna
     aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-  </p>
-  <!-- In this paragraph we will try bold using <strong> tag
-	and italyc format using <em> tags -->
-  <p>
-    <strong>Duis aute irure dolor in reprehenderit in voluptate velit
+    ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+	<!-- In this paragraph we will try bold using <strong> tag -->
+	<h4>Bold style</h4>
+		<p><strong>Duis aute irure dolor in reprehenderit in voluptate velit
     esse cillum dolore eu fugiat nulla pariatur. "</strong></p>
-  <p><em>"Excepteur sint occaecat cupidatat non proident, sunt in
+
+	<!-- In this paragraph we will try italyc format using <em> tags -->
+	<h4>Italyc style</h4>
+	<p><em>"Excepteur sint occaecat cupidatat non proident, sunt in
     culpa qui officia deserunt mollit anim id est laborum."</em></p>
 
+	<!-- Big and small tags -->
+	<h4>Big and small text</h4>
+	<p>This is a <big>BIG</big> word, and this is a <small>SMALL</small> word	</p>
+
+	<!-- Superscript and Subscripts -->
+	<h4>Superscript and Subscripts</h4>
+	<p>H<sub>2</sub>0 and P<sup>2</sup></p>
+
+	<!-- Style and Colors -->
+	<h4>Style and Colors</h4>
+	<h2 style="color: #335CCE;;background-color: #CECB9E;">Title in blue</h2>
+
+<hr>
+
 <!-- Trying Hyperlinks -->
+<h4>Local and external hyperlinks</h4>
 <!-- Local page -->
 <a href="htmlpage1.html">HTML page 1</a>
 <br>
@@ -165,6 +201,15 @@ alt would show an alternative text-->
 
 <!-- Quotations -->
 <p>The <abbr title="World Wide Web">WWW</abbr>is awesome</p>
+
+<br>
+<hr>
+
+<!-- Formatting pages - Structures -->
+<h4> Formatting pages - Structures</h4>
+<p>Lets see all the tags that we need to layout our page</p>
+
+
 
 </body>
 </html>
