--- a/index.html
+++ b/index.html
@@ -96,28 +96,32 @@
 
 <br>
 
+<hr>
+
 <!-- Table tags -->
+<h4>Working with Tables</h4>
 
 <table>
 	<thead>
-		<tr>
+		<caption><h3>List of people</h3></caption>
+			<tr>
 			<th>Name</th>
 			<th>Email</th>
 			<th>Phone number</th>
 		</tr>
-		<tbody>
-			<tr>
-				<td>Juan</td>
-				<td>juan@gmail.com</td>
-				<td>1522006655</td>
-			</tr>
-			<tr>
-				<td>Sara</td>
-				<td>Sara@gmail.com</td>
-				<td>1555883399</td>
-			</tr>
-		</tbody>
 	</thead>
+	<tbody>
+		<tr>
+			<td>Juan</td>
+			<td>juan@gmail.com</td>
+			<td>1522006655</td>
+		</tr>
+		<tr>
+			<td>Sara</td>
+			<td>Sara@gmail.com</td>
+			<td>1555883399</td>
+		</tr>
+	</tbody>
 </table>
 
 <br>
@@ -188,7 +192,7 @@
 <!-- Now lets work with images. If no image is found
 alt would show an alternative text-->
 <a href="images/java.png" target="_blank">
-<img src="images/java.png" alt="My sample image" width="200">
+<img src="images/java.png" alt="My sample image" width="200"/>
 </a>
 
 <br>
@@ -209,6 +213,17 @@ alt would show an alternative text-->
 <h4> Formatting pages - Structures</h4>
 <p>Lets see all the tags that we need to layout our page</p>
 
+<dl>
+<dt>HEAD</dt>
+<dd>It is located up to the top, it contains the logo/name, and the navigation menu</dd>
+<dd>fdsfds</dd>
+<dt>MAIN</dt>
+<dd>The main content of the website </dd>
+</dl>
+<dt>FOOTER</dt>
+<dd>It goes at the buttom of the website</dd>
+
+<p>Click here to see how a page with layout/structure looks like <a href="layout.html" target="_blank">See layout</a></p>
 
 
 </body>
