--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- in the body we insert the contect of the website -->
 <!-- <body style="background-color:lightblue;"> -->
 <body>
-<h2>These are two awesome Youtube videos about HTML</h2>
+<h2>These are two awesome Youtube videos about HTML!</h2>
 <div class="">
 <iframe width="600" height="343" src="https://www.youtube.com/embed/pQN-pnXPaVg" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </div>
